--- a/jp/classes/econometrics2/index.html
+++ b/jp/classes/econometrics2/index.html
@@ -44,10 +44,9 @@
         <p>2022年度 第1クォータ　高知工科大学　経済・マネジメント学群</p>
 
         <h4>
-          <!--<a class="black" href="docs/syllabus_applied-metrics_2021-1Q.pdf"
-            >-->シラバス<!--</a
-          >-->
-          (準備中)
+          <a class="black" href="docs/syllabus_applied-metrics_2022-1Q.pdf"
+            >シラバス</a
+          >
         </h4>
 
         <br />
