--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -140,7 +140,14 @@
           </li>
         </ul>
 
-        <h3>9. 分析結果のプレゼンテーション</h3>
+        <h3>9. 操作変数法</h3>
+        <ul>
+          <li>
+            <!--<a href="slides/.pdf">講義スライド</a>-->
+          </li>
+        </ul>
+
+        <h3>10. 分析結果のプレゼンテーション</h3>
         <ul>
           <li>
             <!--<a href="slides/.pdf">講義スライド</a>-->
