--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -143,7 +143,7 @@
         <h3>9. 操作変数法</h3>
         <ul>
           <li>
-            <!--<a href="slides/.pdf">講義スライド</a>-->
+            <a href="R/IV-method.html">操作変数法</a>
           </li>
         </ul>
 
