update 2022 HC election results

--- a/jp/resources/index.html
+++ b/jp/resources/index.html
@@ -36,6 +36,15 @@
   <!-- InstanceBeginEditable name="content" -->
   <div class="content">
 
+  <h2>第26回参議院議員通常選挙（2022年7月10日実施）の結果</h2>
+    <ul>
+      <li>選挙区：<a href="data/hc2022_prefectures.csv">CSVファイル</a></li>
+      <li>比例区（候補者別）：<a href="data/hc2022_pr_candidates.csv">CSVファイル</a></li>
+      <li>比例区（政党別）：<a href="data/hc2022_pr_parties.csv">CSVファイル</a></li>
+      <li><a href="data/hr2022election.html" target="_blank">データに含まれる変数の説明</a></li>
+      <li><p>データの文字コードは UTF-8 です。</p></li>
+    </ul>
+
   <h2>第49回衆議院議員総選挙（2021年10月31日実施）の結果</h2>
     <ul>
       <li>小選挙区：<a href="data/hr2021_districts.csv">CSVファイル</a></li>
@@ -43,7 +52,7 @@
       <li>比例区（政党別）：<a href="data/hr2021_pr_parties.csv">CSVファイル</a></li>
       <li><a href="data/hr2021election.html" target="_blank">データに含まれる変数の説明</a></li>
       <li><p>データの文字コードは UTF-8 です。</p></li>
- </ul>
+     </ul>
   
   <h2>RとRStudioのインストール方法の解説</h2>
     <ul>
