--- a/jp/resources/index.html
+++ b/jp/resources/index.html
@@ -41,7 +41,7 @@
       <li>選挙区：<a href="data/hc2022_prefectures.csv">CSVファイル</a></li>
       <li>比例区（候補者別）：<a href="data/hc2022_pr_candidates.csv">CSVファイル</a></li>
       <li>比例区（政党別）：<a href="data/hc2022_pr_parties.csv">CSVファイル</a></li>
-      <li><a href="data/hr2022election.html" target="_blank">データに含まれる変数の説明</a></li>
+      <li><a href="data/hc2022election.html" target="_blank">データに含まれる変数の説明</a></li>
       <li><p>データの文字コードは UTF-8 です。</p></li>
     </ul>
 
