fix hc 2022 data

--- a/jp/resources/data/hc2022election.html
+++ b/jp/resources/data/hc2022election.html
@@ -11,7 +11,6 @@
 
 <meta name="author" content="矢内 勇生" />
 
-<meta name="date" content="2022-07-11" />
 
 <title>第26回参議院議員通常選挙データ: 2022 House of Councillors Election Data</title>
 
@@ -463,7 +462,7 @@ of Councillors Election Data</h1>
 <h3 class="subtitle">変数の説明</h3>
 <h4 class="author"><a href="https://yukiyanai.github.io">矢内
 勇生</a></h4>
-<h4 class="date">2022-07-11</h4>
+<h4 class="date">2022-07-11（改訂: 2022-07-12）</h4>
 
 </div>
 
@@ -517,6 +516,8 @@ Political Parties)</a></li>
 <h3>比例区：候補者 (PR: Candidates)</h3>
 <p><br> <a href="hc2022_pr_candidates.csv"><strong>2022参院選比例全国区候補者別データ</strong>（CSVファイル）</a>
 <br><br></p>
+<p><strong>(2022-07-12:
+比例区候補の得票数が抜けていたの修正しました。)</strong></p>
 <p>含まれている変数は以下のとおり。</p>
 <ul>
 <li><code>party</code>: 政党</li>
