--- a/teaching/index.html
+++ b/teaching/index.html
@@ -40,29 +40,30 @@
         <h3>Current (Spring 2022)</h3>
         <ul>
           <li>
-            <a href="/jp/classes/stat2/" target="_blank">Statistics 2</a> (u; in
-            Japanse)
-          </li>
-          <li>
-            <a href="/jp/classes/econometrics2/" target="_blank"
-              >Applied Econometrics</a
-            >
-            (u; in Japanese)
-          </li>
-        </ul>
-
-        <h3>Past</h3>
-        <h4>Kochi University of Technology</h4>
-        <ul>
-          <li>
             <a href="/jp/classes/econometrics1/" target="_blank"
               >Econometrics</a
             >
             (u; in Japanese)
           </li>
           <li>
-            <a href="/jp/classes/info3/" target="_blank"
+            <!--<a href="/jp/classes/info3/" target="_blank"
               >Information Science III</a
+            >-->
+            Information Science III (u; in English)
+          </li>
+        </ul>
+
+        <h3>Past</h3>
+
+        <h4>Kochi University of Technology</h4>
+        <ul>
+          <li>
+            <a href="/jp/classes/stat2/" target="_blank">Statistics 2</a> (u; in
+            Japanse)
+          </li>
+          <li>
+            <a href="/jp/classes/econometrics2/" target="_blank"
+              >Applied Econometrics</a
             >
             (u; in Japanese)
           </li>
