--- a/jp/classes/index.html
+++ b/jp/classes/index.html
@@ -41,20 +41,23 @@
       <div class="content">
         <h2>授業</h2>
 
-        <h3>今学期（2022年度 第1学期）の授業</h3>
+        <h3>今学期（2022年度 第2学期）の授業</h3>
 
         <h4>高知工科大学</h4>
         <ul>
-          <li><a href="stat2/">統計学 2</a></li>
-          <li><a href="econometrics2/">計量経済学応用</a></li>
+          <li><a href="econometrics1/">計量経済学</a></li>
+          <li>
+            <!--<a href="info3">情報科学3</a>-->
+            Information Science III
+          </li>
         </ul>
 
         <h3>過去の授業</h3>
 
         <h4>高知工科大学</h4>
         <ul>
-          <li><a href="econometrics1/">計量経済学</a></li>
-          <li><a href="info3">情報科学3</a></li>
+          <li><a href="stat2/">統計学 2</a></li>
+          <li><a href="econometrics2/">計量経済学応用</a></li>
         </ul>
 
         <h4>他大学</h4>
