--- a/teaching/index.html
+++ b/teaching/index.html
@@ -37,7 +37,7 @@
       <div class="content">
         <h2>Courses</h2>
 
-        <h3>Current (Spring 2022)</h3>
+        <h3>Current (Fall 2022)</h3>
         <ul>
           <li>
             <a href="/jp/classes/econometrics1/" target="_blank"
