--- a/teaching/info3/assignments/info3_hw03_2022.html
+++ b/teaching/info3/assignments/info3_hw03_2022.html
@@ -480,8 +480,8 @@ are available in R.</p>
 <h3>3.</h3>
 <p>Find a graphic you like on the internet (please write down the URL of
 the graphic). Replicate the graphic. Discuss why it is a good graphic.
-If you believe that you can improve the grphic, please do so and explain
-how you improved the figure.</p>
+If you believe that you can improve the graphic, please do so and
+explain how you improved the figure.</p>
 </div>
 <div id="how-to-submit" class="section level3">
 <h3>How to submit</h3>
