update for ay2023

--- a/jp/classes/index.html
+++ b/jp/classes/index.html
@@ -41,15 +41,11 @@
       <div class="content">
         <h2>授業</h2>
 
-        <h3>今学期（2022年度 第2学期）の授業</h3>
+        <h3>今学期（2023年度 第1学期）の授業</h3>
 
         <h4>高知工科大学</h4>
         <ul>
-          <li><a href="econometrics1/">計量経済学</a></li>
-          <li>
-            <!--<a href="info3">情報科学3</a>-->
-            Information Science III
-          </li>
+          <li><a href="stat1/">統計学 1</a></li>
         </ul>
 
         <h3>過去の授業</h3>
@@ -57,6 +53,8 @@
         <h4>高知工科大学</h4>
         <ul>
           <li><a href="stat2/">統計学 2</a></li>
+          <li><a href="econometrics1/">計量経済学</a></li>
+          <li>Information Science III</li>
           <li><a href="econometrics2/">計量経済学応用</a></li>
         </ul>
 
@@ -160,7 +158,7 @@
             <td align="left">
               &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
             </td>
-            <td align="right">&copy; 2014-2022 Yuki Yanai&nbsp;&nbsp;</td>
+            <td align="right">&copy; 2014-2023 Yuki Yanai&nbsp;&nbsp;</td>
           </tr>
         </table>
         <!-- end .footer -->
