--- a/jp/classes/stat1/index.html
+++ b/jp/classes/stat1/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- InstanceBeginEditable name="doctitle" -->
-    <title>Thies &amp; Yanai (2014) - 要旨</title>
+    <title>統計学 1 - 矢内勇生</title>
     <!-- InstanceEndEditable -->
     <link href="../../../css/yy_style.css" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" href="../../../images/favicon.ico" />
@@ -39,26 +39,49 @@
       </div>
       <!-- InstanceBeginEditable name="content" -->
       <div class="content">
-        <h3>
-          Bicameralism vs. Parliamentarism: Lessons from Japan's Twisted Diet
-        </h3>
-        <p>
-          <a class="black" href="http://www.thies.bol.ucla.edu/" target="_blank"
-            >Michael F. Thies</a
-          >
-          and
-          <a class="black" href="http://www.yukiyanai.com/" target="_blank"
-            >Yuki Yanai</a
-          >
-          <br /><br />
-          『選挙研究』30巻2号, pp.60-74. (2014)<br /><br />
-        </p>
+        <h2>統計学 1</h2>
 
-        <h4>要旨</h4>
+        <p>2023年度 第1クォータ 高知工科大学　経済・マネジメント学群</p>
+
+        <h4>
+          <a class="black" href="docs/syllabus-stat1_2023-1Q.pdf">シラバス</a>
+        </h4>
+
+        <br />
+
+        <h3>授業の目的と到達目標</h3>
         <p>
-          David Mayhew (1991)
-          は、与野党が取引をするので、分割政府になっても政権運営が行き詰まることはないと主張した。しかし、議会制の諸国では、政府の存続が立法活動の効率性に依存するため、そのような取引の価値は高くなる。ある議会制の国が強い二院制（つまり、下院に反対する意志と権力の両者をもつ上院）を備えていると、政府は野党が多数を占める上院に政策運営を妨げられ、辞職を強いられるかもしれない。では、日本の「ねじれ国会」は、政権を立ち往生させてきたのだろうか。この疑問に答えるため、本稿は与党が参議院での過半数確保に頻繁に失敗していた1989年から2013年までの日本の国会についてのデータを分析し、円滑な政権運営のために参議院を支配する必要はないが、参議院を野党に支配されると政策実施に大きな困難が生じることを示す。野党に参議院を支配されたとき、与党の提出法案は減少し、法案の修正と否決が増加することが明らかにされる。
+          現代社会にあふれるデータを適切に理解・処理する能力（統計リテラシー）を身につけ、社会を批判的に観察できる目を養うことがこの授業の目的である。統計のウソにだまされないだけでなく、自らも意図せざるウソをつかず、統計を適切に利用・提示できるようになることを目標とする。
         </p>
+        <br />
+
+        <h3><a href="https://yukiyanai.github.io/stat1/">授業の内容</a></h3>
+        <br />
+
+        <h4>教科書</h4>
+
+        <ul>
+          <li>
+            浅野正彦, 矢内勇生 (2018) 『<a
+              href="https://github.com/yukiyanai/quant-methods-R"
+              target="_blank"
+              >Rによる計量政治学</a
+            >』オーム社.
+          </li>
+        </ul>
+
+        <h4>副読本</h4>
+
+        <ul>
+          <li>
+            宋財泫, 矢内勇生（執筆中）『<a
+              href="http://www.jaysong.net/RBook/"
+              target="_blank"
+              >私たちのR：ベストプラクティスの探求</a
+            >』(web book)
+          </li>
+        </ul>
+
         <!-- end .content -->
       </div>
       <!-- InstanceEndEditable -->
