--- a/jp/publications/index.html
+++ b/jp/publications/index.html
@@ -156,6 +156,25 @@
         <ul>
           <li>
             『<a
+              href="https://www.asakura.co.jp/detail.php?book_code=27024"
+              target="_blank"
+              >Rで学ぶゲーム理論</a
+            >』（<a
+              href="https://sites.google.com/site/yoshiokamijo/"
+              target="_blank"
+              >上條良夫</a
+            >と共著）（2023年3月, 朝倉書店）
+            <div class="exp">ISBN: 978-4-254-27024-2</div>
+            <div class="exp">
+              Rスクリプト, 練習問題の解答例などは<a
+                href="https://yoshiokamijo.github.io/rgamer-support/index.html"
+                target="_blank"
+                >本書のサポートページ</a
+              >で.
+            </div>
+          </li>
+          <li>
+            『<a
               href="http://www.yuhikaku.co.jp/books/detail/9784641150799"
               target="_blank"
               >政治経済学：グローバル化時代の国家と市場</a
@@ -185,6 +204,7 @@
             <div class="exp">
               本書の分析に使ったデータセット, Rスクリプト, 練習問題の解答例は<a
                 href="https://github.com/yukiyanai/quant-methods-R"
+                target="_blank"
                 >本書のサポートページ</a
               >で.
             </div>
@@ -207,7 +227,9 @@
             </div>
             <div class="exp">
               本書の分析に使ったデータセットとStataのコード,
-              Rで分析するための方法は<a href="/jp/quant-methods-stata/"
+              Rで分析するための方法は<a
+                href="/jp/quant-methods-stata/"
+                target="_blank"
                 >本書のサポートページ</a
               >で.
             </div>
@@ -217,6 +239,39 @@
         <h3>分担執筆</h3>
 
         <ul>
+          <li>
+            <a
+              href="https://link.springer.com/chapter/10.1007/978-3-031-11324-6_15"
+              target="_blank"
+              >Did COVID-19 Impact Japan's 2021 Gneral Election?</a
+            >
+            (<a href="http://www.thies.bol.ucla.edu/" target="_blank"
+              >Michael F. Thies</a
+            >
+            と共著), in Robert J. Pekkanen, Steven R. Reed, and Daniel M. Smith
+            (eds)
+            <a
+              class="booktitle"
+              href="https://link.springer.com/book/10.1007/978-3-031-11324-6"
+              target="_blank"
+              >Japan Decides 2021: The Japanese General Election</a
+            >
+            (December 2022: Palgrave Macmillan)<!-- [<a
+              class="abst"
+              href="abstracts/governance-with-a-twist.html"
+              target="_blank"
+              >要旨</a
+            >]-->
+            <div class="exp">ISBN: 978-3-031-11324-6</div>
+            <div class="exp">
+              Online Appendix and replication materials are available
+              <a
+                href="https://github.com/yukiyanai/ThiesYanaiJD2021"
+                target="_blank"
+                >here</a
+              >
+            </div>
+          </li>
           <li>
             え！そっちに入れるんですか？伸縮する政策空間における有権者の投票行動モデリング.
             豊田秀樹（編）『たのしいベイズモデリング2：事例で拓く研究のフロンティア』（<a
@@ -474,7 +529,7 @@
             <td align="left">
               &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
             </td>
-            <td align="right">&copy; 2014-2022 Yuki Yanai&nbsp;&nbsp;</td>
+            <td align="right">&copy; 2014-2023 Yuki Yanai&nbsp;&nbsp;</td>
           </tr>
         </table>
         <!-- end .footer -->
