--- a/jp/textbooks/index.html
+++ b/jp/textbooks/index.html
@@ -43,6 +43,53 @@
 
         <h2>
           『<a
+            href="https://www.asakura.co.jp/detail.php?book_code=27024"
+            target="_blank"
+            >Rで学ぶゲーム理論</a
+          >』
+        </h2>
+        <img
+          src="images/gametheoryRcover.jpg"
+          width="20%"
+          align="right"
+          hspace="40"
+          vspace="0"
+          border="1"
+        />
+        <h3>
+          &nbsp;&nbsp;&nbsp;&nbsp;<a
+            href="https://sites.google.com/site/yoshiokamijo/"
+            target="_blank"
+            >上條良夫</a
+          >
+          氏と共著
+        </h3>
+        <h4>
+          &nbsp;&nbsp;&nbsp;&nbsp;2023年,
+          <a href="https://www.asakura.co.jp/" target="_blank">朝倉書店</a>
+        </h4>
+        <h4>&nbsp;&nbsp;&nbsp;&nbsp;ISBN: 978-4-641-15079-9</h4>
+        <h3>
+          &nbsp;&nbsp;&nbsp;&nbsp;<a
+            href="https://www.asakura.co.jp/detail.php?book_code=27024"
+            target="_blank"
+            >ここ</a
+          >
+          から購入できます
+        </h3>
+        <h3>
+          サポートページは<a
+            href="https://yoshiokamijo.github.io/rgamer-support/index.html"
+            target="_blank"
+            >こちら</a
+          >
+        </h3>
+        <br /><br />
+        <br /><br />
+        <br /><br />
+
+        <h2>
+          『<a
             href="http://www.yuhikaku.co.jp/books/detail/9784641150799"
             target="_blank"
             >政治経済学：グローバル化時代の国家と市場</a
@@ -224,7 +271,7 @@
             <td align="left">
               &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
             </td>
-            <td align="right">&copy; 2014-2022 Yuki Yanai&nbsp;&nbsp;</td>
+            <td align="right">&copy; 2014-2023 Yuki Yanai&nbsp;&nbsp;</td>
           </tr>
         </table>
         <!-- end .footer -->
