--- a/research/index.html
+++ b/research/index.html
@@ -165,6 +165,22 @@
           <li>
             <a
               class="booktitle"
+              href="https://www.asakura.co.jp/detail.php?book_code=27024"
+              target="_blank"
+              >R de manabu Gemuriron</a
+            >
+            [<i>Game Theory with R</i>] (with
+            <a
+              href="https://sites.google.com/site/yoshiokamijo/"
+              target="_blank"
+              >Yoshio Kamijo</a
+            >).（Mar. 2023, Asakurashoten）
+            <div class="exp">ISBN: 978-4-254-27024-2</div>
+          </li>
+
+          <li>
+            <a
+              class="booktitle"
               href="http://www.yuhikaku.co.jp/books/detail/9784641150799"
               target="_blank"
               >Seijikeizaigaku: Gur&#333;barujidai-no-kokka-to-shij&#333;</a
@@ -224,6 +240,39 @@
         <h3>Book Chapters</h3>
 
         <ul>
+          <li>
+            <a
+              href="https://link.springer.com/chapter/10.1007/978-3-031-11324-6_15"
+              target="_blank"
+              >Did COVID-19 Impact Japan's 2021 Gneral Election?</a
+            >
+            (with
+            <a href="http://www.thies.bol.ucla.edu/" target="_blank"
+              >Michael F. Thies</a
+            >
+            ). In Robert J. Pekkanen, Steven R. Reed, and Daniel M. Smith (eds)
+            <a
+              class="booktitle"
+              href="https://link.springer.com/book/10.1007/978-3-031-11324-6"
+              target="_blank"
+              >Japan Decides 2021: The Japanese General Election</a
+            >
+            (December 2022: Palgrave Macmillan)<!-- [<a
+              class="abst"
+              href="abstracts/governance-with-a-twist.html"
+              target="_blank"
+              >要旨</a
+            >]-->
+            <div class="exp">ISBN: 978-3-031-11324-6</div>
+            <div class="exp">
+              Online Appendix and replication materials are available
+              <a
+                href="https://github.com/yukiyanai/ThiesYanaiJD2021"
+                target="_blank"
+                >here</a
+              >.
+            </div>
+          </li>
           <li>
             You Vote for What? Modeling Voting Behavior in an Elastic Policy
             Space (with
@@ -370,7 +419,7 @@
             <td align="left">
               &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
             </td>
-            <td align="right">&copy; 2014-2022 Yuki Yanai&nbsp;&nbsp;</td>
+            <td align="right">&copy; 2014-2023 Yuki Yanai&nbsp;&nbsp;</td>
           </tr>
         </table>
         <!-- end .footer -->
