update metrics2 for 2023

--- a/jp/classes/index.html
+++ b/jp/classes/index.html
@@ -41,21 +41,26 @@
       <div class="content">
         <h2>授業</h2>
 
-        <h3>今学期（2023年度 第1学期）の授業</h3>
+        <h3>今学期（2023年度 第2学期）の授業</h3>
 
         <h4>高知工科大学</h4>
         <ul>
-          <li><a href="stat1/">統計学 1</a></li>
+          <li><a href="stat2/">統計学 2</a></li>
+          <li><a href="econometrics2/">計量経済学応用</a></li>
+        </ul>
+
+        <h4>放送大学高知学習センター</h4>
+        <ul>
+          <li>政治経済学</li>
         </ul>
 
         <h3>過去の授業</h3>
 
         <h4>高知工科大学</h4>
         <ul>
-          <li><a href="stat2/">統計学 2</a></li>
+          <li><a href="stat1/">統計学 1</a></li>
           <li><a href="econometrics1/">計量経済学</a></li>
           <li>Information Science III</li>
-          <li><a href="econometrics2/">計量経済学応用</a></li>
         </ul>
 
         <h4>他大学</h4>
