update metrics2 - RCT

--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -70,10 +70,10 @@
           <li>
             <a href="R/metrics2_intro.html">この授業で実習を行う準備</a>
           </li>
-          <!--<li>
-            <a href="R/metrics2_2021_assignment1.html">課題1</a>
-            （<strong>提出期限：2021年4月17日（土）正午</strong>）
-          </li>-->
+          <li>
+            <a href="R/metrics2_2023_assignment1.html">課題1</a>
+            （<strong>提出期限：2023年10月7日（土）午後5時</strong>）
+          </li>
         </ul>
 
         <h3>2. セレクションバイアス</h3>
