--- a/teaching/index.html
+++ b/teaching/index.html
@@ -37,23 +37,7 @@
       <div class="content">
         <h2>Courses</h2>
 
-        <h3>Current (Fall 2022)</h3>
-        <ul>
-          <li>
-            <a href="/jp/classes/econometrics1/" target="_blank"
-              >Econometrics</a
-            >
-            (u; in Japanese)
-          </li>
-          <li>
-            <!--<a href="/jp/classes/info3/" target="_blank"
-              >Information Science III</a
-            >-->
-            Information Science III (u; in English)
-          </li>
-        </ul>
-
-        <h3>Past</h3>
+        <h3>Current (Fall 2023)</h3>
 
         <h4>Kochi University of Technology</h4>
         <ul>
@@ -67,6 +51,20 @@
             >
             (u; in Japanese)
           </li>
+        </ul>
+
+        <h3>Past</h3>
+
+        <h4>Kochi University of Technology</h4>
+        <ul>
+          <li><a href="jp/classes/stat1">Statistics 1</a> (u; in Japanese)</li>
+          <li>
+            <a href="/jp/classes/econometrics1/" target="_blank"
+              >Econometrics</a
+            >
+            (u; in Japanese)
+          </li>
+          <li>Information Science III (u; in English)</li>
         </ul>
 
         <h4>Kobe University</h4>
