--- a/jp/classes/stat2/contents/R/stat2_2023_hw03.html
+++ b/jp/classes/stat2/contents/R/stat2_2023_hw03.html
@@ -11,6 +11,7 @@
 
 <meta name="author" content="矢内 勇生" />
 
+<meta name="date" content="2023-11-09" />
 
 <title>統計学 2 – 課題3</title>
 
@@ -473,6 +474,7 @@ display: none;
 
 <h1 class="title toc-ignore">統計学 2 – 課題3</h1>
 <h4 class="author">矢内 勇生</h4>
+<h4 class="date">2023-11-09</h4>
 
 </div>
 
