--- a/teaching/index.html
+++ b/teaching/index.html
@@ -57,7 +57,7 @@
 
         <h4>Kochi University of Technology</h4>
         <ul>
-          <li><a href="jp/classes/stat1">Statistics 1</a> (u; in Japanese)</li>
+          <li><a href="/jp/classes/stat1">Statistics 1</a> (u; in Japanese)</li>
           <li>
             <a href="/jp/classes/econometrics1/" target="_blank"
               >Econometrics</a
