--- a/jp/publications/index.html
+++ b/jp/publications/index.html
@@ -393,12 +393,17 @@
           <li>
             <a class="black" href="http://www.jpsa-web.org/" target="_blank"
               >日本政治学会</a
-            >：2015, 2020
+            >：2015, 2020, 2022
           </li>
           <li>
             <a class="black" href="http://www.jaesnet.org/" target="_blank"
               >日本選挙学会</a
-            >：2011, 2012, 2013, 2014, 2019
+            >：2011, 2012, 2013, 2014, 2019, 2021, 2022, 2023
+          </li>
+          <li>
+            <a class="black" href="http://www.publicchoice.jp/" target="_blank"
+              >公共選択学会</a
+            >：2022, 2023
           </li>
           <li>
             <a class="black" href="http://www.jacpnet.org/" target="_blank"
@@ -416,7 +421,7 @@
           <li>
             <a class="black" href="http://www.apsanet.org/" target="_blank"
               >American Political Science Association</a
-            >： 2012 [x2], 2019, 2020
+            >： 2012 [x2], 2019, 2020, 2021, 2023
           </li>
           <li>
             <a class="black" href="http://www.apsanet.org/" target="_blank"
@@ -439,7 +444,7 @@
           <li>
             <a class="black" href="http://www.ipsa.org/" target="_blank"
               >International Political Science Association</a
-            >： 2018 [x2]
+            >： 2018 [x2], 2021 [x2]
           </li>
           <li>
             <a class="black" href="http://www.mpsanet.org/" target="_blank"
@@ -482,6 +487,13 @@
         <h3>賞・研究費・奨学金</h3>
 
         <ul>
+          <li>
+            公共選択学会,
+            「公共選択のフロンティア」優秀報告賞（原田賞）（2023年12月2日）
+          </li>
+          <li>
+            科学研究費補助金・基盤B, No.23H00779（2023-26年度）[研究代表者]
+          </li>
           <li>高知工科大学, The Teacher of the Year（2020年度）</li>
           <li>
             科学研究費補助金・基盤B, No.19H01447（2019-22年度）[研究代表者]
