--- a/jp/publications/index.html
+++ b/jp/publications/index.html
@@ -488,12 +488,18 @@
 
         <ul>
           <li>
+            科学研究費補助金・国際共同研究強化,
+            No.23KK0233（2023年度採択）[研究代表者]
+          </li>
+          <li>
             公共選択学会,
             「公共選択のフロンティア」優秀報告賞（原田賞）（2023年12月2日）
           </li>
           <li>
             科学研究費補助金・基盤B, No.23H00779（2023-26年度）[研究代表者]
           </li>
+          <li>日本選挙学会, 優秀ポスター賞（2022年5月7日）</li>
+          <li></li>
           <li>高知工科大学, The Teacher of the Year（2020年度）</li>
           <li>
             科学研究費補助金・基盤B, No.19H01447（2019-22年度）[研究代表者]
@@ -554,7 +560,7 @@
             <td align="left">
               &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
             </td>
-            <td align="right">&copy; 2014-2023 Yuki Yanai&nbsp;&nbsp;</td>
+            <td align="right">&copy; 2014-2024 Yuki Yanai&nbsp;&nbsp;</td>
           </tr>
         </table>
         <!-- end .footer -->
