--- a/teaching/index.html
+++ b/teaching/index.html
@@ -37,7 +37,23 @@
       <div class="content">
         <h2>Courses</h2>
 
-        <h3>Current (Fall 2023)</h3>
+        <h3>Current (Spring 2024)</h3>
+
+        <h4>Kochi University of Technology</h4>
+        <ul>
+          <li>
+            <a href="/jp/classes/stat1" target="_blank">Statistics 1</a> (u; in
+            Japanese)
+          </li>
+          <li>
+            <a href="/jp/classes/econometrics1/" target="_blank"
+              >Econometrics</a
+            >
+            (u; in Japanese)
+          </li>
+        </ul>
+
+        <h3>Past</h3>
 
         <h4>Kochi University of Technology</h4>
         <ul>
@@ -48,19 +64,6 @@
           <li>
             <a href="/jp/classes/econometrics2/" target="_blank"
               >Applied Econometrics</a
-            >
-            (u; in Japanese)
-          </li>
-        </ul>
-
-        <h3>Past</h3>
-
-        <h4>Kochi University of Technology</h4>
-        <ul>
-          <li><a href="/jp/classes/stat1">Statistics 1</a> (u; in Japanese)</li>
-          <li>
-            <a href="/jp/classes/econometrics1/" target="_blank"
-              >Econometrics</a
             >
             (u; in Japanese)
           </li>
@@ -198,7 +201,7 @@
             <td align="left">
               &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
             </td>
-            <td align="right">&copy; 2014-2023 Yuki Yanai&nbsp;&nbsp;</td>
+            <td align="right">&copy; 2014-2024 Yuki Yanai&nbsp;&nbsp;</td>
           </tr>
         </table>
         <!-- end .footer -->
