--- a/cv/index.html
+++ b/cv/index.html
@@ -134,14 +134,15 @@
         <h3>Grants and Awards</h3>
         <ul>
           <li>
-            The Teacher of the Year (for the 2020-2021 academic year), Kochi
-            University of Technology
-          </li>
-          <li>
             Japan Society for the Promotion of Science, Grant-in-Aid for
             Scientific Research (KAKEN): Nos. 22830099 (2010-2012), 25780102
             (2013-2016), 16K17051 (2016-2019), 19K21682 (2019-2022), and
-            19H01447 (2019-2023).
+            19H01447 (2019-2023), 23H00779 (2023-2027), and 23KK0233
+            (2024-2027).
+          </li>
+          <li>
+            The Teacher of the Year (for the 2020-2021 academic year), Kochi
+            University of Technology
           </li>
           <li>
             Walter Beach Award, Southern Political Science Association (2018)
