--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           research investigates the relationships between political behavior and
           economic inequality in advanced industrial nations. Another research
           focus is to analyze the effects of bicameralism on lawmaking in
-          parliamentary democrarcies.
+          parliamentary democracies.
         </p>
         <p></p>
 
@@ -84,7 +84,7 @@
             <td align="left">
               &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
             </td>
-            <td align="right">&copy; 2014-2023 Yuki Yanai&nbsp;&nbsp;</td>
+            <td align="right">&copy; 2014-2024 Yuki Yanai&nbsp;&nbsp;</td>
           </tr>
         </table>
         <!-- end .footer -->
