--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -42,7 +42,13 @@
       <!-- InstanceBeginEditable name="content" -->
       <div class="content">
         <h1>計量経済学</h1>
-        <p>2021年度 第3クォータ　高知工科大学　経済・マネジメント学群</p>
+
+        <p><b>この資料は2022年度のものです。最新の資料は <a href="https://yukiyanai.github.io/econometrics/">こちら</a> にあります。</b></p>
+
+        <br>
+
+        <p>2022年度 第3クォータ　高知工科大学　経済・マネジメント学群</p>
+
         <p><a href="../">授業概要</a></p>
         <br />
 
@@ -192,7 +198,7 @@
             <td align="left">
               &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
             </td>
-            <td align="right">&copy; 2014-2022 Yuki Yanai&nbsp;&nbsp;</td>
+            <td align="right">&copy; 2014-2024 Yuki Yanai&nbsp;&nbsp;</td>
           </tr>
         </table>
         <!-- end .footer -->
