--- a/jp/classes/econometrics1/index.html
+++ b/jp/classes/econometrics1/index.html
@@ -41,10 +41,10 @@
       <div class="content">
         <h2>計量経済学</h2>
 
-        <p>2022年度 第3クォータ　高知工科大学　経済・マネジメント学群</p>
+        <p>2024年度 第1クォータ　高知工科大学　経済・マネジメント学群</p>
 
         <h4>
-          <a class="black" href="docs/syllabus-econometrics_2022-3Q.pdf"
+          <a class="black" href="docs/syllabus-econometrics_2024-1Q.pdf"
             >シラバス</a
           >
         </h4>
@@ -60,7 +60,11 @@
         </p>
         <br />
 
-        <h3><a href="contents/">授業の内容</a></h3>
+        <h3>
+          <a href="https://yukiyanai.github.io/econometrics/" target="_blank"
+            >授業の内容</a
+          >
+        </h3>
         <br />
 
         <h4>教科書</h4>
@@ -107,7 +111,7 @@
             <td align="left">
               &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
             </td>
-            <td align="right">&copy; 2014-2022 Yuki Yanai&nbsp;&nbsp;</td>
+            <td align="right">&copy; 2014-2024 Yuki Yanai&nbsp;&nbsp;</td>
           </tr>
         </table>
         <!-- end .footer -->
