--- a/jp/classes/stat1/index.html
+++ b/jp/classes/stat1/index.html
@@ -41,10 +41,10 @@
       <div class="content">
         <h2>統計学 1</h2>
 
-        <p>2023年度 第1クォータ 高知工科大学　経済・マネジメント学群</p>
+        <p>2024年度 第1クォータ 高知工科大学　経済・マネジメント学群</p>
 
         <h4>
-          <a class="black" href="docs/syllabus-stat1_2023-1Q.pdf">シラバス</a>
+          <a class="black" href="docs/syllabus-stat1_2024-1Q.pdf">シラバス</a>
         </h4>
 
         <br />
@@ -55,7 +55,11 @@
         </p>
         <br />
 
-        <h3><a href="https://yukiyanai.github.io/stat1/">授業の内容</a></h3>
+        <h3>
+          <a href="https://yukiyanai.github.io/stat1/" target="_blank"
+            >授業の内容</a
+          >
+        </h3>
         <br />
 
         <h4>教科書</h4>
@@ -114,7 +118,7 @@
             <td align="left">
               &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
             </td>
-            <td align="right">&copy; 2014-2023 Yuki Yanai&nbsp;&nbsp;</td>
+            <td align="right">&copy; 2014-2024 Yuki Yanai&nbsp;&nbsp;</td>
           </tr>
         </table>
         <!-- end .footer -->
