update 2024 election data

--- a/cv/index.html
+++ b/cv/index.html
@@ -42,7 +42,7 @@
         </p>
         <br />
 
-        <h3>Current Position</h3>
+        <h3>Current Positions</h3>
         <ul>
           <li>
             Associate Professor, School of Economics &amp; Management,
@@ -52,6 +52,18 @@
               >Kochi University of Technology</a
             >
             (Aug 2021 - present)
+          </li>
+          <li>
+            Visiting Research Fellow, Faculty of Social and Behavioural
+            Sciences, University of Amsterdam (Aug 2024 - present)
+          </li>
+          <li>
+            Visiting Scholar, Graduate School of Law, Kobe University (Apr 2019
+            - present)
+          </li>
+          <li>
+            Visiting Scholar, The Waseda Institute for EU Studies, Waseda
+            University (Sep 2018 - present)
           </li>
         </ul>
 
@@ -103,7 +115,7 @@
             </p>
             <p>
               Committee:
-              <a href="https://www.golden.polisci.ucla.edu/" target="_blank"
+              <a href="https://www.miriamgolden.com/" target="_blank"
                 >Miriam A. Golden</a
               >
               (chair),
@@ -193,7 +205,7 @@
             <td align="left">
               &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
             </td>
-            <td align="right">&copy; 2014-2023 Yuki Yanai&nbsp;&nbsp;</td>
+            <td align="right">&copy; 2014-2024 Yuki Yanai&nbsp;&nbsp;</td>
           </tr>
         </table>
         <!-- end .footer -->
