--- a/jp/classes/index.html
+++ b/jp/classes/index.html
@@ -41,30 +41,27 @@
       <div class="content">
         <h2>授業</h2>
 
-        <h3>今学期（2024年度 第1学期）の授業</h3>
+        <h3>今学期の授業</h3>
 
         <h4>高知工科大学</h4>
         <ul>
-          <li><a href="stat1/">統計学 1</a></li>
-          <li><a href="econometrics1/">計量経済学</a></li>
-        </ul>
-
-        <h4>放送大学高知学習センター</h4>
-        <ul>
-          <li>政治経済学</li>
+          <li>2024年8月〜2025年8月まで在外研究のため講義は担当しません。</li>
         </ul>
 
         <h3>過去の授業</h3>
 
         <h4>高知工科大学</h4>
         <ul>
+          <li><a href="stat1/">統計学 1</a></li>
           <li><a href="stat2/">統計学 2</a></li>
+          <li><a href="econometrics1/">計量経済学</a></li>
           <li><a href="econometrics2/">計量経済学応用</a></li>
           <li>Information Science III</li>
         </ul>
 
         <h4>他大学</h4>
         <ul>
+          <li>政治経済学 [2023年度第2学期, 放送大学高知学習センター]</li>
           <li>
             <a href="kobe-cp/">比較政治学 B</a> [2017年夏期集中, 2018年夏期集中,
             神戸大学 法学部]
