--- a/jp/index.html
+++ b/jp/index.html
@@ -50,7 +50,7 @@
           >
           経済・マネジメント学群 准教授
         </h3>
-
+        <h4>アムステルダム大学 政治学部 客員研究員（2024年8月〜）</h4>
         <h4>
           <a href="http://www.law.kobe-u.ac.jp/">神戸大学大学院 法学研究科</a>
           研究員（2019年4月〜）
