--- a/jp/publications/index.html
+++ b/jp/publications/index.html
@@ -72,17 +72,16 @@
             >]
           </li>
           <li>
-            Who Gets Close to Government Policies, and Who Steps Away?（<a
-              href="https://soheishigemura.com/"
-              target="_blank"
-              >重村壮平</a
+            <a href="https://doi.org/10.14854/jaes.36.2_139" target="_blank"
+              >Who Gets Close to Government Policies, and Who Steps Away?</a
+            >（<a href="https://soheishigemura.com/" target="_blank">重村壮平</a
             >,
             <a href="http://www.jaysong.net/" target="_blank">宋財泫</a>
             と共著）『選挙研究』36(2): 139-150 (2020) [<a
               class="abst"
               href="https://github.com/yukiyanai/jjes_persuasion"
               target="_blank"
-              >要旨・分析再現用データ</a
+              >分析再現用データ</a
             >]
           </li>
 
