--- a/jp/resources/index.html
+++ b/jp/resources/index.html
@@ -36,6 +36,15 @@
   <!-- InstanceBeginEditable name="content" -->
   <div class="content">
 
+  <h2>第50回衆議院議員総選挙（2024年10月27日実施）の結果</h2>
+    <ul>
+      <li>小選挙区：<a href="data/hr2024_districts.csv">CSVファイル</a></li>
+      <li>比例区（候補者別）：<a href="data/hr2024_pr_candidates.csv">CSVファイル</a></li>
+      <li>比例区（政党別）：<a href="data/hr2024_pr_parties.csv">CSVファイル</a></li>
+      <li><a href="data/hr2024election.html" target="_blank">データに含まれる変数の説明</a></li>
+      <li><p>データの文字コードは UTF-8 です。</p></li>
+     </ul>
+
   <h2>第26回参議院議員通常選挙（2022年7月10日実施）の結果</h2>
     <ul>
       <li>選挙区：<a href="data/hc2022_prefectures.csv">CSVファイル</a></li>
@@ -54,16 +63,7 @@
       <li><p>データの文字コードは UTF-8 です。</p></li>
      </ul>
   
-  <h2>RとRStudioのインストール方法の解説</h2>
-    <ul>
-      <li><a href="docs/install-R_ubuntu.pdf" target="_blank">Linux (Ubuntu) 編</a> (PDF, 4.6MB)</li>
-      <li><a href="docs/install-R_macOS.pdf" target="_blank">macOS 編</a> (PDF, 4.9MB)</a></li>
-      <li><a href="docs/install-R_windows.pdf" target="_blank">Windows 編</a> （PDF, 6.2MB）</li>
-      <p> Windows編で、引用符があるコードをコピペすると動かないという不具合があったので修正しました。修正した頁は 79, 80, 98, 99, 101, 102です。指摘してくれた日道さんと矢吹さんに感謝します。（2020-07-05 追記）</p>
-      <p>Windows編の p.72 を書き換えました（インストール場所を C ドライブ直下に変更）。（2020-07-08 追記）</p>
-      <p>Windows編のp.98 の補足として p.99 を追加しました。土井翔平さんに感謝。（2021-04-16 追記）</p>
-      <p><b>大学の授業でRを使う方へ：インストールについてメールで質問されても答えられません。質問は授業の担当教員にしてください。</b>資料を読んでもわからないことがあれば、<a href="https://github.com/tokyor/r-wakalang" target="_blank">r-wakalang</a> の初心者チャンネル (#r_beginners) で質問することをお勧めします。</p>
-    </ul>
+  
 
   <h2>R パッケージ</h2>
     <ul>
@@ -91,6 +91,16 @@
       <li><a href="docs/beamercolorthemebruin.sty" target="_blank">beamercolorthemebruin.sty</a></li>
     </ul>
 
+  <h2>RとRStudioのインストール方法の解説</h2>
+    <ul>
+      <li><a href="docs/install-R_ubuntu.pdf" target="_blank">Linux (Ubuntu) 編</a> (PDF, 4.6MB)</li>
+      <li><a href="docs/install-R_macOS.pdf" target="_blank">macOS 編</a> (PDF, 4.9MB)</a></li>
+      <li><a href="docs/install-R_windows.pdf" target="_blank">Windows 編</a> （PDF, 6.2MB）</li>
+      <p> Windows編で、引用符があるコードをコピペすると動かないという不具合があったので修正しました。修正した頁は 79, 80, 98, 99, 101, 102です。指摘してくれた日道さんと矢吹さんに感謝します。（2020-07-05 追記）</p>
+      <p>Windows編の p.72 を書き換えました（インストール場所を C ドライブ直下に変更）。（2020-07-08 追記）</p>
+      <p>Windows編のp.98 の補足として p.99 を追加しました。土井翔平さんに感謝。（2021-04-16 追記）</p>
+      <p><b>大学の授業でRを使う方へ：インストールについてメールで質問されても答えられません。質問は授業の担当教員にしてください。</b>資料を読んでもわからないことがあれば、<a href="https://github.com/tokyor/r-wakalang" target="_blank">r-wakalang</a> の初心者チャンネル (#r_beginners) で質問することをお勧めします。</p>
+    </ul>
 
 
   <!-- end .content -->
