--- a/research/index.html
+++ b/research/index.html
@@ -69,7 +69,9 @@
             >]
           </li>
           <li>
-            Who Gets Close to Government Policies, and Who Steps Away?（with
+            <a href="https://doi.org/10.14854/jaes.36.2_139" target="_blank"
+              >Who Gets Close to Government Policies, and Who Steps Away?</a
+            >（with
             <a href="https://soheishigemura.com/" target="_blank"
               >Sohei Shigemura</a
             >
@@ -85,7 +87,7 @@
               class="abst"
               href="https://github.com/yukiyanai/jjes_persuasion"
               target="_blank"
-              >Abstaract and Replication Materials</a
+              >Replication Materials</a
             >]
           </li>
 
