--- a/ETAD/index.html
+++ b/ETAD/index.html
@@ -577,7 +577,7 @@ install the package from <a href="https://github.com/yukiyanai/ETAD">GitHub</a>,
 <li><a href="https://masaakihigashijima.com/">Masaaki Higashijima</a>,
 The University of Tokyo</li>
 <li>Naoki Shimizu, University of Kochi</li>
-<li>Hidekuni Washida, Toyo University</li>
+<li><a href="https://orcid.org/0000-0003-2119-8127">Hidekuni Washida</a>, Toyo University</li>
 <li><a href="https://yukiyanai.github.io/">Yuki Yanai</a>, Kochi
 University of Technology</li>
 </ul>
