update for ETAD release

--- a/jp/publications/index.html
+++ b/jp/publications/index.html
@@ -44,6 +44,10 @@
         <h3>論文</h3>
         <ul>
           <li>
+          Election Timing across Autocracy and Democracy (ETAD): A New Dataset of National Election Dates（<a href="https://masaakihigashijima.com/" target="_blank"
+              >東島雅昌</a>, 清水直樹, 鷲田任邦と共著） <a class="booktitle">Electoral Studies</a> (accepted for publication, 2025)
+          </li>
+          <li>
             <a href="https://doi.org/10.1093/poq/nfae022" target="_blank"
               >The Dynamics of Electoral Manipulation and Institutional Trust in
               Democracies: Election Timing, Blatant Fraud, and the Legitimacy of
@@ -51,7 +55,7 @@
             >（<a href="https://masaakihigashijima.com/" target="_blank"
               >東島雅昌</a
             >, 門屋寿と共著）
-            <a class="booktitle">Public Opinion Quarterly</a> (2024)
+            <a class="booktitle">Public Opinion Quarterly</a> 88: 472-494 (2024)
           </li>
           <li>
             <a href="https://doi.org/10.1017/S1468109920000122" target="_blank"
@@ -249,10 +253,19 @@
 
         <ul>
           <li>
+          「統計的因果推論」（pp.66-67）,「重回帰」(pp.70-71). 日本比較政治学会（編）『比較政治学事典』（2025年1月, 丸善出版）
+          <div class="exp">
+              ISBN: 978-4621309995&nbsp;&nbsp;
+              <a href="http://amazon.co.jp/dp/4621309994/" target="_blank"
+                >amazon.co.jp</a
+              >で購入できます.
+            </div>
+          </li>
+          <li>
             <a
               href="https://link.springer.com/chapter/10.1007/978-3-031-11324-6_15"
               target="_blank"
-              >Did COVID-19 Impact Japan's 2021 Gneral Election?</a
+              >Did COVID-19 Impact Japan's 2021 General Election?</a
             >
             (<a href="http://www.thies.bol.ucla.edu/" target="_blank"
               >Michael F. Thies</a
@@ -556,7 +569,7 @@
             <td align="left">
               &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
             </td>
-            <td align="right">&copy; 2014-2024 Yuki Yanai&nbsp;&nbsp;</td>
+            <td align="right">&copy; 2014-2025 Yuki Yanai&nbsp;&nbsp;</td>
           </tr>
         </table>
         <!-- end .footer -->
