--- a/research/index.html
+++ b/research/index.html
@@ -38,6 +38,13 @@
         <h3>Journal Articles</h3>
         <ul>
           <li>
+          Election Timing across Autocracy and Democracy (ETAD): A New Dataset of National Election Dates（with <a href="https://masaakihigashijima.com/" target="_blank"
+              >Masaaki Higashijima</a>,
+              Naoki Shimizu, and Hidekuni Washida)
+              <a class="booktitle">Electoral Studies</a> (accepted for publication, 2025)
+          </li>
+
+          <li>
             <a href="https://doi.org/10.1093/poq/nfae022" target="_blank"
               >The Dynamics of Electoral Manipulation and Institutional Trust in
               Democracies: Election Timing, Blatant Fraud, and the Legitimacy of
@@ -48,7 +55,7 @@
               >Masaaki Higashijima</a
             >
             and Hisashi Kadoya)
-            <a class="booktitle">Public Opinion Quarterly</a> (2024)
+            <a class="booktitle">Public Opinion Quarterly</a> 88: 472-494 (2024)
           </li>
           <li>
             <a href="https://doi.org/10.1017/S1468109920000122" target="_blank"
@@ -434,7 +441,7 @@
             <td align="left">
               &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
             </td>
-            <td align="right">&copy; 2014-2024 Yuki Yanai&nbsp;&nbsp;</td>
+            <td align="right">&copy; 2014-2025 Yuki Yanai&nbsp;&nbsp;</td>
           </tr>
         </table>
         <!-- end .footer -->
