--- a/teaching/index.html
+++ b/teaching/index.html
@@ -36,8 +36,14 @@
       <!-- InstanceBeginEditable name="content" -->
       <div class="content">
         <h2>Courses</h2>
+        
+        <p>On sabbatical leave from August 2024 to November 2025.</p>
 
-        <h3>Current (Spring 2024)</h3>
+        <!--<h3>Current (Fall 2025)</h3>
+
+        <h4>Kochi University of Technology</h4>-->
+        
+        <h3>Past</h3>
 
         <h4>Kochi University of Technology</h4>
         <ul>
@@ -51,12 +57,6 @@
             >
             (u; in Japanese)
           </li>
-        </ul>
-
-        <h3>Past</h3>
-
-        <h4>Kochi University of Technology</h4>
-        <ul>
           <li>
             <a href="/jp/classes/stat2/" target="_blank">Statistics 2</a> (u; in
             Japanse)
